entrega final del proyecto

--- a/scss/base/_extend.scss
+++ b/scss/base/_extend.scss
@@ -14,3 +14,16 @@
     display: flex;
     font-weight: bold;
 }
+
+%atributos-div-s5{
+    display: flex;
+    background-color: #E5CB9F;
+}
+
+%atributos-p-s5{
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 1rem;
+    color: white;
+    font-weight: bold;
+    background-color: #e6c372 ;
+}
