--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,17 @@ body main .seccion-3 .prop1, body main .seccion-3 .prop2, body main .seccion-3 .
   display: flex;
   font-weight: bold; }
 
+body main .seccion-5 .atributo1, body main .seccion-5 .atributo2, body main .seccion-5 .atributo3, body main .seccion-5 .atributo4, body main .seccion-5 .atributo5, body main .seccion-5 .atributo6, body main .seccion-5 .atributo7, body main .seccion-5 .atributo8 {
+  display: flex;
+  background-color: #E5CB9F; }
+
+body main .seccion-5 .atributo1 p, body main .seccion-5 .atributo2 p, body main .seccion-5 .atributo3 p, body main .seccion-5 .atributo4 p, body main .seccion-5 .atributo5 p, body main .seccion-5 .atributo6 p, body main .seccion-5 .atributo7 p, body main .seccion-5 .atributo8 p {
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 1rem;
+  color: white;
+  font-weight: bold;
+  background-color: #e6c372; }
+
 /* estilos del index*/
 body {
   height: 100%; }
@@ -350,73 +361,70 @@ body .headerMas {
 
 body .mainMas {
   display: grid;
-  grid-template-columns: 1fr 1.3fr;
-  grid-template-rows: 10% 90%;
-  grid-template-areas: "button button"  "imgMas textoTip";
-  align-items: center;
-  height: 100%; }
-  body .mainMas .imgMas {
-    grid-area: imgMas;
-    display: flex;
-    justify-content: center; }
-    body .mainMas .imgMas img {
-      width: 80%;
-      height: 100%; }
-  body .mainMas .textoTip {
-    grid-area: textoTip;
-    font-family: 'Montserrat', sans-serif;
-    margin: 40px 5px; }
-    body .mainMas .textoTip .estiloTip {
-      grid-area: estiloTip;
-      display: flex;
-      justify-content: start;
-      align-items: center;
-      width: 200px;
-      height: 200px;
-      border-radius: 100px;
-      background-color: #59ff5986;
-      text-align: center; }
-      body .mainMas .textoTip .estiloTip h2 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        padding: 10px; }
-    body .mainMas .textoTip .listaTip {
-      grid-area: listaTip;
-      margin: 0;
-      font-size: 1rem;
-      background-color: #A084CA;
-      color: white;
-      width: 75%;
-      border-radius: 20px;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3); }
-      body .mainMas .textoTip .listaTip ul {
-        margin: 10px;
-        padding: 10px; }
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 5% 20% 75%;
+  grid-template-areas: "button button"  "h2 h2" "imgmas listatip"; }
   body .mainMas .anteriores {
     grid-area: button;
     display: flex;
-    justify-content: right;
-    margin-right: 50px; }
+    justify-content: end; }
     body .mainMas .anteriores button {
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      width: 18%;
+      width: auto;
       height: auto;
       background-color: black;
       color: white;
       font-family: 'Montserrat', sans-serif;
       border: none;
-      border-radius: 5px; }
+      border-radius: 5px;
+      margin-right: 25px; }
       body .mainMas .anteriores button .icono {
-        padding: 0 15px; }
+        padding-left: 10px; }
       body .mainMas .anteriores button a {
         text-decoration: none;
         color: whitesmoke;
-        font-size: auto; }
+        font-size: auto;
+        padding: 0 10px; }
     body .mainMas .anteriores button:hover {
       background-color: #59ce8f;
       box-shadow: 1px 1px 7px black; }
+  body .mainMas .estiloTip {
+    grid-area: h2;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    background-color: #59ff5986;
+    text-align: center;
+    margin-left: 30px;
+    z-index: 1; }
+    body .mainMas .estiloTip h2 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      padding: 10px; }
+  body .mainMas .imgMas {
+    grid-area: imgmas;
+    display: flex;
+    justify-content: center; }
+    body .mainMas .imgMas img {
+      z-index: -1; }
+  body .mainMas .listaTip {
+    grid-area: listatip; }
+    body .mainMas .listaTip ul {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.6rem;
+      font-weight: bold;
+      color: #748DA6; }
+      body .mainMas .listaTip ul span {
+        font-size: 3rem;
+        color: #3d8676; }
+      body .mainMas .listaTip ul li {
+        font-family: 'Ms Madi', cursive;
+        color: #413F42; }
 
 /* Estilos de Nutritips */
 body header .navTips {
@@ -431,6 +439,28 @@ body header .h1Tips {
     font-weight: bold;
     color: #54BAB9;
     margin: 20px 0 0 80px; }
+
+body header .buttonTop {
+  padding: 10px;
+  display: flex;
+  justify-content: end;
+  align-items: flex-start;
+  width: 100%; }
+  body header .buttonTop a {
+    position: fixed;
+    text-decoration: none;
+    background-color: #2b48659d;
+    color: whitesmoke;
+    padding: 5px 8px;
+    border-radius: 15px;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-right: 30px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3); }
+  body header .buttonTop a:hover {
+    background-color: black;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    transform: translateY(-5px); }
 
 body main .seccion-1 {
   display: grid;
@@ -499,7 +529,7 @@ body main .seccion-1 {
     background-position: center; }
   body main .seccion-1 .tip-3 {
     grid-area: tip-3;
-    background-color: #B97A95;
+    background-image: url(../img/background.image/mas-page4.PNG);
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: whitesmoke;
@@ -514,7 +544,7 @@ body main .seccion-1 {
     background-position: center; }
   body main .seccion-1 .tip-4 {
     grid-area: tip-4;
-    background-color: #59CE8F;
+    background-image: url(../img/background.image/mas-page5.PNG);
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: whitesmoke;
@@ -545,7 +575,7 @@ body main .seccion-1 {
 
 body main .seccion-2 {
   display: grid;
-  height: 60vw;
+  height: 70vw;
   grid-template-columns: 2.2fr 1fr;
   grid-template-rows: 50% 50%;
   grid-template-areas: "texto img-encabezado" "img-fondo img-fondo";
@@ -553,14 +583,14 @@ body main .seccion-2 {
   border-top: 20px solid rgba(0, 0, 0, 0.8);
   border-bottom: 20px solid rgba(0, 0, 0, 0.8);
   font-family: 'Montserrat', sans-serif;
-  margin-bottom: 80px; }
+  margin-bottom: 50px; }
   body main .seccion-2 .imgCabezaS2 {
     grid-area: img-encabezado;
     display: flex;
     align-items: flex-end;
     margin-right: 80px; }
     body main .seccion-2 .imgCabezaS2 img {
-      height: 95%; }
+      height: 90%; }
   body main .seccion-2 .texto {
     grid-area: texto;
     display: flex;
@@ -586,8 +616,8 @@ body main .seccion-2 {
 
 body main .seccion-3 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 10% 8% 25% 8% 7% 7% 35%;
+  grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
+  grid-template-rows: 10% 8% 25% 8% 6% 6% 40%;
   grid-template-areas: "h2 h2 h2 h2" "subtitulo subtitulo subtitulo subtitulo" "textos3 textos3 textos3 textos3" "h3 h3 h3 h3" "prop1 prop2 prop3 prop4" "prop5 prop5 prop6 prop6" "imgs3 imgs3 imgs3 imgs3";
   height: 70vw;
   font-family: 'Combo', cursive;
@@ -650,13 +680,17 @@ body main .seccion-3 {
       font-size: 1.3rem; }
   body main .seccion-3 .prop5 {
     grid-area: prop5;
-    justify-content: center; }
+    justify-content: center;
+    position: relative;
+    left: 15%; }
     body main .seccion-3 .prop5 p {
       font-size: 1.3rem;
       padding: 10px; }
   body main .seccion-3 .prop6 {
     grid-area: prop6;
-    justify-content: center; }
+    justify-content: center;
+    position: relative;
+    right: 20%; }
     body main .seccion-3 .prop6 p {
       font-size: 1.3rem;
       padding: 10px; }
@@ -664,24 +698,126 @@ body main .seccion-3 {
     z-index: 1; }
   body main .seccion-3 .imgS3 {
     grid-area: imgs3;
+    display: flex;
+    justify-content: center;
     height: 100%; }
     body main .seccion-3 .imgS3 img {
       position: relative;
-      top: -50%;
-      left: 35%;
-      z-index: 0; }
+      bottom: 30%;
+      z-index: -1; }
 
 body main .seccion-4 {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  /*grid-template-areas: ;*/ }
+  height: 70vw;
+  grid-template-columns: 1.5fr 0.5fr;
+  grid-template-rows: 30% 70%;
+  grid-template-areas: "h2 h2" "textos4 imgs4";
+  padding-top: 30px;
+  background-color: #FFE6E6;
+  border-bottom: 20px solid rgba(0, 0, 0, 0.8); }
+  body main .seccion-4 .tituloS4 {
+    grid-area: h2;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    align-items: center;
+    height: 100%; }
+    body main .seccion-4 .tituloS4 h2 {
+      font-weight: bold;
+      font-size: 2.5rem;
+      z-index: 1;
+      color: #748DA6; }
+      body main .seccion-4 .tituloS4 h2 span {
+        font-size: 7rem;
+        color: #3d8676;
+        position: relative;
+        left: 19%;
+        top: 18px;
+        z-index: -1; }
+  body main .seccion-4 .textoS4 {
+    grid-area: textos4;
+    display: flex;
+    justify-content: end;
+    z-index: 1;
+    font-family: 'Ms Madi', cursive;
+    font-size: 1.6rem;
+    font-weight: bold; }
+  body main .seccion-4 .imgS4 {
+    grid-area: imgs4;
+    position: relative;
+    right: 40%;
+    top: 60px;
+    z-index: 0; }
 
 body main .seccion-5 {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  /*grid-template-areas: ;*/ }
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 20% 15% 30% 10% 15%;
+  grid-template-areas: "titulo titulo titulo" "atributo1 atributo2 atributo2" "atributo3 imgs5 atributo4" "atributo5 imgs5 atributo6" "atributo7 atributo7 atributo8";
+  background-color: #E5CB9F;
+  height: auto; }
+  body main .seccion-5 .tituloS5 {
+    grid-area: titulo;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    border-bottom: 15px solid #E38B29;
+    background-color: #BB9981;
+    padding-top: 30px; }
+    body main .seccion-5 .tituloS5 p {
+      font-size: 1.8rem;
+      font-weight: 700;
+      align-self: center; }
+    body main .seccion-5 .tituloS5 h2 {
+      font-size: 2.8rem;
+      align-self: end;
+      color: #E3C770;
+      font-weight: bold; }
+  body main .seccion-5 .atributo1 {
+    grid-area: atributo1;
+    justify-content: end;
+    align-items: flex-end; }
+  body main .seccion-5 .atributo2 {
+    grid-area: atributo2;
+    justify-content: center;
+    align-items: flex-end; }
+  body main .seccion-5 .atributo3 {
+    grid-area: atributo3;
+    justify-content: end;
+    align-items: center; }
+  body main .seccion-5 .atributo4 {
+    grid-area: atributo4;
+    align-items: center; }
+  body main .seccion-5 .atributo5 {
+    grid-area: atributo5;
+    justify-content: end;
+    align-items: flex-start; }
+  body main .seccion-5 .atributo6 {
+    grid-area: atributo6;
+    align-items: flex-start; }
+    body main .seccion-5 .atributo6 p {
+      width: auto; }
+  body main .seccion-5 .atributo7 {
+    grid-area: atributo7;
+    justify-content: center;
+    align-items: flex-start; }
+  body main .seccion-5 .atributo8 {
+    grid-area: atributo8;
+    align-items: flex-start; }
+  body main .seccion-5 .imgS5 {
+    grid-area: imgs5; }
+    body main .seccion-5 .imgS5 img {
+      position: relative;
+      z-index: 0;
+      bottom: 52%; }
+
+body .footerAnteriores {
+  background-color: #354259;
+  padding: 20px;
+  margin: 0; }
+  body .footerAnteriores p {
+    color: white;
+    font-family: 'Montserrat', sans-serif; }
 
 /* Media Queries */
 @media screen and (max-width: 800px) {
@@ -731,7 +867,7 @@ body main .seccion-5 {
     flex-direction: column;
     height: auto; }
     body .tienda .h1Tienda {
-      height: 230px;
+      height: 120px;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat; }
@@ -778,10 +914,173 @@ body main .seccion-5 {
       margin-bottom: 30px; }
       body .mainMas .anteriores .buttonMas {
         width: auto; }
-    body .mainMas .textoTip {
+    body .mainMas .imgMas {
       display: flex;
+      justify-content: center;
+      width: auto; }
+      body .mainMas .imgMas img {
+        width: 80%; }
+    body .mainMas .listaTip {
+      width: auto; } }
+
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+  /* Mas..*/
+  body .mainMas .imgMas {
+    justify-content: end; }
+    body .mainMas .imgMas img {
+      width: 80%;
+      height: 80%; } }
+
+/*Anteriores*/
+/* Tablets */
+@media screen and (min-width: 740px) and (max-width: 1045px) {
+  body main .seccion-1 .principal {
+    width: 100%; }
+    body main .seccion-1 .principal p {
+      font-size: 3vh; }
+  body main .seccion-1 div a {
+    width: 100%;
+    font-size: 80%;
+    text-align: center; }
+  body main .seccion-2 {
+    grid-template-columns: 2fr 1fr; }
+    body main .seccion-2 .texto {
+      width: auto;
+      line-height: normal; }
+      body main .seccion-2 .texto .titulo {
+        font-size: 80%;
+        padding: 0; }
+      body main .seccion-2 .texto p {
+        font-size: 80%; }
+  body main .seccion-3 {
+    height: auto; }
+  body main .seccion-4 {
+    height: auto;
+    grid-template-columns: 60% 40%; }
+    body main .seccion-4 .tituloS4 {
+      width: 1fr; }
+      body main .seccion-4 .tituloS4 h2 {
+        font-size: 220%; }
+        body main .seccion-4 .tituloS4 h2 span {
+          font-size: 220%;
+          left: 18%; }
+    body main .seccion-4 .textoS4 ol {
+      height: 60vw;
+      font-size: 80%; }
+    body main .seccion-4 .imgS4 {
+      right: 20%; }
+      body main .seccion-4 .imgS4 img {
+        width: 120%; }
+  body main .seccion-5 {
+    grid-template-columns: 30% 30% 40%; }
+    body main .seccion-5 .atributo4 {
+      justify-content: end; }
+    body main .seccion-5 .imgS5 img {
+      bottom: 40%;
+      width: 150%; }
+    body main .seccion-5 .atributo6 {
+      justify-content: end; } }
+
+/* mobile */
+@media screen and (max-width: 740px) {
+  body header .buttonTop a {
+    margin: 0;
+    font-size: 70%; }
+  body main .seccion-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    margin: 0 10px 20px 10px; }
+    body main .seccion-1 div {
+      padding: 25% 10% 0 10%; }
+      body main .seccion-1 div a {
+        font-size: 60%; }
+    body main .seccion-1 .principal p {
+      font-size: 1.5vh; }
+  body main .seccion-2 {
+    display: flex;
+    flex-direction: column;
+    height: auto; }
+    body main .seccion-2 .imgCabezaS2 {
+      display: none; }
+    body main .seccion-2 .texto {
+      margin: 0; }
+    body main .seccion-2 .imgFondoS2 {
+      margin: 0 0 10px 0; }
+  body main .seccion-3 {
+    height: auto;
+    grid-template-rows: 5% 5% 27% 8% 10% 4% 30%; }
+    body main .seccion-3 .tituloS3 h2 {
+      font-size: 170%; }
+    body main .seccion-3 .subtituloS3 {
+      font-size: 100%; }
+    body main .seccion-3 .textoS3 {
+      justify-content: center; }
+      body main .seccion-3 .textoS3 p {
+        margin-bottom: 0; }
+    body main .seccion-3 .imgS3 img {
+      width: auto;
+      bottom: 0; }
+    body main .seccion-3 .prop1 p {
+      align-self: flex-end; }
+    body main .seccion-3 .prop3 p {
+      align-self: flex-end; }
+  body main .seccion-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: auto; }
+    body main .seccion-4 .tituloS4 {
+      width: 100vw; }
+      body main .seccion-4 .tituloS4 h2 {
+        font-size: 100%; }
+        body main .seccion-4 .tituloS4 h2 span {
+          font-size: 200%;
+          left: 18%;
+          top: 5px; }
+    body main .seccion-4 .textoS4 {
+      justify-content: center;
+      font-size: 80%; }
+    body main .seccion-4 .imgS4 {
+      display: flex;
+      justify-content: center;
+      right: 0;
+      top: 0; }
+      body main .seccion-4 .imgS4 img {
+        width: 60%; }
+  body main .seccion-5 {
+    display: flex;
+    flex-direction: column;
+    height: 100vh; }
+    body main .seccion-5 .tituloS5 {
       flex-direction: column;
-      align-items: center;
-      width: 100%; }
-      body .mainMas .textoTip .listaTip {
-        width: auto; } }
+      justify-content: center; }
+      body main .seccion-5 .tituloS5 p {
+        align-self: center;
+        font-size: 3.5vh; }
+      body main .seccion-5 .tituloS5 h2 {
+        align-self: center;
+        font-size: 4.5vh; }
+    body main .seccion-5 .atributo1 {
+      justify-content: start; }
+    body main .seccion-5 .atributo2 {
+      justify-content: end; }
+    body main .seccion-5 .atributo3 {
+      justify-content: start; }
+    body main .seccion-5 .atributo4 {
+      justify-content: end; }
+    body main .seccion-5 .atributo5 {
+      justify-content: start; }
+    body main .seccion-5 .atributo6 {
+      justify-content: end; }
+    body main .seccion-5 .atributo7 {
+      justify-content: start; }
+    body main .seccion-5 .atributo8 {
+      justify-content: end; }
+    body main .seccion-5 .imgS5 {
+      display: flex;
+      justify-content: center; }
+      body main .seccion-5 .imgS5 img {
+        width: 80%;
+        bottom: 30%; } }
