--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -85,7 +85,7 @@
             flex-direction: column;
             height: auto;
             .h1Tienda{
-                height: 230px;
+                height: 120px;
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -160,15 +160,37 @@
                     width: auto;
                 }
             }
-            .textoTip{
+            .imgMas{
                 display: flex;
-                flex-direction: column;
-                align-items: center;
-                width: 100%;
-                .listaTip{
-                    width: auto;
+                justify-content: center;
+                width: auto;
+                img{
+                    width: 80%;
+                }           
+            }
+            .listaTip{
+                width: auto;
+                }
+        }
+    }
+}
+
+
+@media screen and (min-width: 800px) and (max-width: 1000px) {
+    
+    /* Mas..*/
+
+    body{
+        .mainMas{
+            .imgMas{
+                justify-content: end;
+                img{
+                    width: 80%;
+                    height: 80%;
                 }
             }
         }
+
+
     }
 }
